clickgraph-go/clickgraph_ffi/clickgraph_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
void ffi_clickgraph_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_clickgraph_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_clickgraph_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_pointer(uint64_t handle
);
void* ffi_clickgraph_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_clickgraph_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_clickgraph_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_clickgraph_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_free_void(uint64_t handle
);
void ffi_clickgraph_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_create_edge(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_create_edges(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_create_node(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_create_nodes(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_delete_edges(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_delete_nodes(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_execute_sql(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_export(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_export_to_sql(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_get_query_timeout(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_import_csv_file(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_import_file(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_import_json(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_import_json_file(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_import_parquet_file(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_query(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_query_graph(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_query_remote(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_query_remote_graph(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_query_to_sql(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_set_query_timeout(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_store_subgraph(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_upsert_edge(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_connection_upsert_node(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_database_connect(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_graphresult_edge_count(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_graphresult_edges(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_graphresult_node_count(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_graphresult_nodes(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_column_names(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_all_rows(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_column_data_types(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_compiling_time(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_execution_time(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_next(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_get_write_counters(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_has_next(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_num_rows(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_method_queryresult_reset(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_constructor_database_open(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_constructor_database_open_in_memory(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_constructor_database_open_sql_only(void
    
);
uint16_t uniffi_clickgraph_ffi_checksum_constructor_database_open_with_config(void
    
);
uint32_t ffi_clickgraph_ffi_uniffi_contract_version(void
    
);