clickgraph-py/clickgraph/_ffi.py

    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_free_void.restype = None
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_clickgraph_ffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_edge.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_edge.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_edges.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_edges.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_node.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_node.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_nodes.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_create_nodes.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_delete_edges.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_delete_edges.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_delete_nodes.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_delete_nodes.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_execute_sql.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_execute_sql.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_export.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_export.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_export_to_sql.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_export_to_sql.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_get_query_timeout.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_get_query_timeout.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_csv_file.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_csv_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_file.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_json.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_json.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_json_file.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_json_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_parquet_file.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_import_parquet_file.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_graph.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_graph.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_remote.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_remote.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_remote_graph.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_remote_graph.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_to_sql.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_query_to_sql.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_set_query_timeout.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_set_query_timeout.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_store_subgraph.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_store_subgraph.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_upsert_edge.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_upsert_edge.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_upsert_node.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_connection_upsert_node.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_database_connect.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_database_connect.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_edge_count.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_edge_count.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_edges.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_edges.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_node_count.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_node_count.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_nodes.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_graphresult_nodes.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_column_names.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_column_names.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_all_rows.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_all_rows.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_column_data_types.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_column_data_types.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_compiling_time.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_compiling_time.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_execution_time.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_execution_time.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_next.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_write_counters.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_get_write_counters.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_has_next.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_has_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_num_rows.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_num_rows.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_reset.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_method_queryresult_reset.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_in_memory.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_in_memory.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_sql_only.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_sql_only.restype = ctypes.c_uint16
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_with_config.argtypes = (
)
_UniffiLib.uniffi_clickgraph_ffi_checksum_constructor_database_open_with_config.restype = ctypes.c_uint16
_UniffiLib.ffi_clickgraph_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_clickgraph_ffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.

